# biomapper

./: .env.example  .env.template  .env_template  .gitignore  .readthedocs.yaml  .task-prompt.md  2025-06-23-222641-feedback-fix-cache-tests.md  ACTIONS_TO_IMPLEMENT.md  AIDL_INTEGRATION.md  ALGORITHM_OPTIMIZATION_SUMMARY.md  ARCHITECTURAL_ANALYSIS_REPORT.md  ARCHITECTURAL_MATURITY_ASSESSMENT_2025.md  BIOMAPPER_ARCHITECTURE_INVESTIGATION_REPORT.md  BIOMAPPER_ARCHITECTURE_ROADMAP.md  BIOMAPPER_COMPATIBILITY_MATRIX.md  BIOMAPPER_RESTRUCTURING_PLAN.md  CHANGELOG.md  CLAUDE.md  CLEANUP_BLOAT.md  CLEANUP_SUMMARY.md  Dockerfile.ci  GEMINI_REVIEW_REPORT.md  GOOGLE_DRIVE_SETUP.md  GOOGLE_DRIVE_SOLUTIONS.md  INVESTIGATE_V3_PIPELINE_ISSUES.md  INVESTIGATION_PROMPT_KG2C_NORMALIZED.md  INVESTIGATION_PROMPT_MERGE_DATASETS_ISSUE.md  INVESTIGATION_PROMPT_NO_MATCHES_FOUND.md  LLM_ANALYSIS_IMPLEMENTATION_REPORT.md  MULTI_ENTITY_STRATEGIES_COMPLETION_REPORT.md  Makefile  PARAMETER_STANDARDIZATION_FINAL_REPORT.md  PATTERN_ANALYSIS_REPORT.md  Q6EMK4_BUG_REPORT.md  Q6EMK4_BUG_REPORT_CORRECTED.md  Q6EMK4_INVESTIGATION_SUMMARY.md  Q6EMK4_RESOLUTION.md  README.md  REFACTORING_FEEDBACK.md  REFACTORING_SUMMARY.md  (+121 more)
.claude/: BIOLOGICAL_ACTIONS.md  BIOMAPPER_CONTEXT.md  DEVELOPMENT_WORKFLOW.md  VALIDATION_FRAMEWORK.md  architecture.yaml  settings.json
.github/: PULL_REQUEST_VALIDATION.md  pull_request_template.md
audits/: complexity_audit.py
biomapper/: __init__.py  config.py
biomapper-api/: CLAUDE.md  README.md  biomapper.db  biomapper_mock.py  pyproject.toml  test_logging_main.py  test_main_config.py
biomapper-api/alembic/: env.py
biomapper-api/alembic/versions/: ada2dc5c241a_add_state_persistence_tables.py
biomapper-api/app/: main.py
biomapper-api/app/api/: deps.py
biomapper-api/app/api/routes/: endpoints.py  files.py  health.py  jobs.py  mapping.py  resources.py  strategies.py  strategies_enhanced.py  strategies_v2_simple.py
biomapper-api/app/config/: resources.py
biomapper-api/app/core/: config.py  database.py  logging_config.py  session.py
biomapper-api/app/models/: file.py  job.py  job.py.backup  mapping.py  persistence.py  strategy.py  strategy_execution.py
biomapper-api/app/services/: action_registry.py  csv_service.py  execution_engine.py  mapper_service.py  persistence_service.py  persistent_execution_engine.py  prerequisites.py  resource_aware_engine.py  resource_manager.py
biomapper-api/app/utils/: error_utils.py  file_utils.py
biomapper-api/biomapper_mock/: __init__.py
biomapper-api/biomapper_mock/core/: mapping_executor.py
biomapper-api/biomapper_mock/core/models/: strategy.py
biomapper-api/biomapper_mock/mapping/relationships/: executor.py
biomapper-api/configs/strategies/: prot_arv_to_kg2c_uniprot_v1_base.yaml  prot_arv_to_spoke_uniprot_v1_base.yaml  prot_arv_ukb_comparison_uniprot_v1_base.yaml  prot_multi_to_unified_uniprot_v1_enhanced.yaml  prot_ukb_to_kg2c_uniprot_v1_base.yaml  prot_ukb_to_spoke_uniprot_v1_base.yaml
biomapper-api/tests/services/: test_resource_manager.py
biomapper-ui/: README.md  simple-validation.js  vite.config.ts
biomapper-ui-backup/: node-polyfill.js  polyfill.js  vite-preload.mjs
biomapper_client/: IMPLEMENTATION_REPORT.md  README.md  README_ENHANCED.md  pyproject.toml  test_client.py
biomapper_client/biomapper_client/: __init__.py  cli.py  cli_utils.py  cli_v2.py  client.py  client_v2.py  exceptions.py  jupyter.py  models.py  progress.py
biomapper_client/tests/: test_client_v2.py  test_models.py  test_progress.py
configs/: ACTION_DEVELOPMENT_STATUS.md  BIOMAPPER_API_GUIDE.md  CLAUDE.md  CONFIGURATION_QUICK_REFERENCE.md  IMPLEMENTATION_REPORT.md  INFRASTRUCTURE_REPORT.md  MIGRATION_CHECKLIST.md  PROJECT_STATUS_SUMMARY.md  README.md  STRATEGY_DEVELOPMENT_CONTEXT.md  STRATEGY_ORGANIZATION_GUIDE.md  arivale_kg2c_mapping.yaml  arivale_spoke_mapping.yaml  arivale_ukbb_mapping.yaml  biomapper_api_client_tutorial.ipynb  example_uniprot_historical_resolution_strategy.yaml  full_featured_ukbb_hpa_strategy.yaml  hpa_spoke_mapping.yaml  mapping_strategies_config.yaml  mappings_list.csv  mappings_list.csv.backup  mappings_list_actions_summary.md  protein_config.yaml  protein_config.yaml.backup  protein_config.yaml.backup.20250613_065020  ukbb_hpa_analysis_strategy.yaml  ukbb_hpa_analysis_strategy_optimized_v2.yaml  ukbb_hpa_mapping.yaml  ukbb_hpa_with_historical_resolution.yaml  ukbb_kg2c_mapping.yaml  ukbb_spoke_mapping.yaml
data/: README_db_config.md  mapping_cache.db-shm  mapping_cache.db-wal  metamapper.db  metamapper.db.bak
docs/: ACTION_TYPES_REFERENCE.md  API_METHODS.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION_MIGRATION_GUIDE.md  CONFIG_TYPE_FIELD_REFERENCE.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_REVIEW_REPORT.md  DOCUMENTATION_REVIEW_SUMMARY.md  IMPLEMENTATION_RECOMMENDATIONS.md  MAPPING_STRATEGIES_DESIGN.md  README.md  SPARQL_IMPLEMENTATION_STATUS_REPORT.md  STATIC_DATABASE_ARCHITECTURE_VISION.md  cache_system.md  code_examples_verification_report.md  enhanced_mapping_executor.md  mapping_executor_architecture.md  requirements.txt
examples/: .pytest.ini  README.md  cache_integration.py  pubchem_rag_with_scores.py  resource_metadata_example.py  sample_strategy_with_typed_action.yaml  spoke_cache_integration.py  tutorial_metabolite_mapping_rag.py  tutorial_protein.py  typed_action_demo.py  typed_action_example.py
investigation/: FINAL_REPORT.md  Q6EMK4_FINAL_INVESTIGATION_REPORT.md  Q6EMK4_INVESTIGATION_REPORT.md  analyze_isoform_pattern.py  analyze_match_failure.py  (+22 more)
(+2541 files in other folders)
