[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biomapper-api"
version = "0.1.0"
description = "API layer for Biomapper Web UI"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.1",
    "python-multipart>=0.0.6",
    "pandas>=2.1.1",
    "python-dotenv>=1.0.0",
    "uuid>=1.30",
    "biomapper @ file:///home/ubuntu/biomapper/dist/biomapper-0.4.0-py3-none-any.whl",
    "psutil (>=7.0.0,<8.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "ruff>=0.1.5",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
