[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biomapper-api"
version = "0.1.0"
description = "API layer for Biomapper Web UI"
readme = "README.md"
authors = ["Biomapper Team <biomapper@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.104.1"
uvicorn = ">=0.24.0"
pydantic = "^2.11.4"
pydantic-settings = ">=2.1.0"
python-multipart = ">=0.0.6"
structlog = ">=23.2.0"
pandas = ">=2.1.1"
python-dotenv = ">=1.0.0"
uuid = ">=1.30"
psutil = ">=7.0.0,<8.0.0"
# Reference to local biomapper package in development mode
biomapper = {path = "../", develop = true}
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-asyncio = ">=0.21.1"
httpx = ">=0.25.1"
black = ">=23.11.0"
isort = ">=5.12.0"
ruff = ">=0.1.5"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
